[gd_scene load_steps=8 format=3 uid="uid://battle3d001"]

[ext_resource type="Script" path="res://src/scenes/Battle3DScene.gd" id="1_scene"]
[ext_resource type="Script" path="res://src/rendering/IsometricCamera.gd" id="2_camera"]
[ext_resource type="Script" path="res://src/rendering/BattleMap3D.gd" id="3_map"]
[ext_resource type="Script" path="res://src/systems/combat/BattleController.gd" id="4_battle"]
[ext_resource type="Script" path="res://src/systems/combat/PlacementPhase.gd" id="5_placement"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.1, 0.12, 0.18, 1)
ambient_light_source = 2
ambient_light_color = Color(0.4, 0.45, 0.5, 1)
ambient_light_energy = 0.5
tonemap_mode = 2
ssao_enabled = true
ssao_radius = 1.0
ssao_intensity = 1.5
glow_enabled = true
glow_intensity = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_floor"]
albedo_color = Color(0.35, 0.4, 0.5, 1)
roughness = 0.8

[node name="Battle3D" type="Node3D"]
script = ExtResource("1_scene")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612372, 0.612372, 10, 15, 10)
light_color = Color(1, 0.95, 0.9, 1)
light_energy = 1.2
shadow_enabled = true
shadow_bias = 0.02
directional_shadow_mode = 1

[node name="FillLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, 0.353553, -0.353553, 0, 0.707107, 0.707107, 0.5, -0.612372, 0.612372, -5, 8, -5)
light_color = Color(0.7, 0.8, 1, 1)
light_energy = 0.4
shadow_enabled = false

[node name="IsometricCamera" type="Camera3D" parent="."]
transform = Transform3D(0.707107, -0.408248, 0.577350, 0, 0.816497, 0.577350, -0.707107, -0.408248, 0.577350, 15, 20, 15)
current = true
projection = 1
size = 15.0
far = 200.0
script = ExtResource("2_camera")
isometric_angle = 35.264
rotation_angle = 45.0
min_zoom = 5.0
max_zoom = 30.0

[node name="BattleMap3D" type="Node3D" parent="."]
script = ExtResource("3_map")

[node name="BattleController" type="Node" parent="."]
script = ExtResource("4_battle")

[node name="PlacementPhase" type="Node" parent="."]
script = ExtResource("5_placement")
auto_slow_motion = false
slow_motion_scale = 0.3

[node name="UI" type="CanvasLayer" parent="."]
layer = 10

[node name="BattleHUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="TopBar" type="HBoxContainer" parent="UI/BattleHUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 16.0
offset_top = 10.0
offset_right = -16.0
offset_bottom = 60.0

[node name="WaveLabel" type="Label" parent="UI/BattleHUD/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "WAVE 1/5"

[node name="Spacer" type="Control" parent="UI/BattleHUD/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnemyCount" type="Label" parent="UI/BattleHUD/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Enemies: 0"

[node name="Spacer2" type="Control" parent="UI/BattleHUD/TopBar"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="CreditsLabel" type="Label" parent="UI/BattleHUD/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
text = "Credits: 0"

[node name="BottomPanel" type="PanelContainer" parent="UI/BattleHUD"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0

[node name="HBox" type="HBoxContainer" parent="UI/BattleHUD/BottomPanel"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="MarginLeft" type="MarginContainer" parent="UI/BattleHUD/BottomPanel/HBox"]
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="CrewSlots" type="HBoxContainer" parent="UI/BattleHUD/BottomPanel/HBox/MarginLeft"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Spacer" type="Control" parent="UI/BattleHUD/BottomPanel/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RavenPanel" type="VBoxContainer" parent="UI/BattleHUD/BottomPanel/HBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="RavenLabel" type="Label" parent="UI/BattleHUD/BottomPanel/HBox/RavenPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "RAVEN"
horizontal_alignment = 1

[node name="RavenButtons" type="HBoxContainer" parent="UI/BattleHUD/BottomPanel/HBox/RavenPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ScoutBtn" type="Button" parent="UI/BattleHUD/BottomPanel/HBox/RavenPanel/RavenButtons"]
custom_minimum_size = Vector2(70, 45)
layout_mode = 2
text = "Scout"

[node name="FlareBtn" type="Button" parent="UI/BattleHUD/BottomPanel/HBox/RavenPanel/RavenButtons"]
custom_minimum_size = Vector2(70, 45)
layout_mode = 2
text = "Flare"

[node name="ResupplyBtn" type="Button" parent="UI/BattleHUD/BottomPanel/HBox/RavenPanel/RavenButtons"]
custom_minimum_size = Vector2(70, 45)
layout_mode = 2
text = "Supply"

[node name="OrbitalBtn" type="Button" parent="UI/BattleHUD/BottomPanel/HBox/RavenPanel/RavenButtons"]
custom_minimum_size = Vector2(70, 45)
layout_mode = 2
text = "Strike"

[node name="MarginRight" type="MarginContainer" parent="UI/BattleHUD/BottomPanel/HBox"]
layout_mode = 2
theme_override_constants/margin_right = 16

[node name="DeployButton" type="Button" parent="UI/BattleHUD"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 150.0
offset_right = 100.0
offset_bottom = 200.0
theme_override_font_sizes/font_size = 24
text = "DEPLOY"

[node name="PlacementLabel" type="Label" parent="UI/BattleHUD"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 130.0
theme_override_font_sizes/font_size = 32
text = "SELECT YOUR SQUADS"
horizontal_alignment = 1

[node name="Instructions" type="Label" parent="UI/BattleHUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -25.0
offset_right = 300.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "[LMB] Select/Move | [RMB] Attack | [1-4] Select Crew | [Q] Skill | [Space] Pause"
horizontal_alignment = 1

[node name="PauseOverlay" type="ColorRect" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="PauseLabel" type="Label" parent="UI/PauseOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 48
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeBtn" type="Button" parent="UI/PauseOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_right = 80.0
offset_bottom = 45.0
text = "RESUME"

[node name="MenuBtn" type="Button" parent="UI/PauseOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 55.0
offset_right = 80.0
offset_bottom = 100.0
text = "MAIN MENU"
